--- a/website/frontend/public/index.html
+++ b/website/frontend/public/index.html
@@ -42,6 +42,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+  <div class="banner">
+    <img src="/banner.jpg" alt="" />
+    <img src="/banner.jpg" alt="" />
+    <img src="/banner.jpg" alt="" />
+    <img src="/banner.jpg" alt="" />
+  </div>
 </body>
 
 </html>
