--- a/website/frontend/public/index.html
+++ b/website/frontend/public/index.html
@@ -43,7 +43,7 @@
     -->
 
   <div class="banner">
-    <img src="/banner.jpg" alt="" />
+    <img src="/101.jpg" alt="" />
     <img src="/banner.jpg" alt="" />
     <img src="/banner.jpg" alt="" />
     <img src="/banner.jpg" alt="" />
