--- a/website/frontend/public/index.html
+++ b/website/frontend/public/index.html
@@ -44,9 +44,9 @@
 
   <div class="banner">
     <img src="/101.jpg" alt="" />
-    <img src="/banner.jpg" alt="" />
-    <img src="/banner.jpg" alt="" />
-    <img src="/banner.jpg" alt="" />
+    <img src="/ts.jpg" alt="" />
+    <img src="/cksmh.jpg" alt="" />
+    <img src="/nm.jpg" alt="" />
   </div>
 
   <div id="root"></div>
