--- a/website/frontend/public/index.html
+++ b/website/frontend/public/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
-  <title>Scoreboard</title>
+  <title>roaMRT</title>
   <style>
     .banner img {
       filter: blur(2px); /* Adjust the blur radius as needed */
